# Modulardata

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.worker  Procfile  README.md  docker-compose.yml  pyproject.toml  railway.json
.claude/: PROJECT_STATUS.md  settings.json
agents/: __init__.py  chat_handler.py  engineer.py  guardrails.py  plan_translator.py  response_generator.py  risk_assessment.py  strategist.py  tester.py
agents/models/: __init__.py  execution_result.py  technical_plan.py  test_result.py
agents/prompts/: __init__.py  strategist_system.py
agents/quality_checks/: __init__.py  duplicates.py  nulls.py  registry.py  rows.py  schema.py  values.py
agents/transformations/: __init__.py  advanced_ops.py  aggregation.py  cleaning.py  column_math.py  date_ops.py  filtering.py  registry.py  restructuring.py  string_ops.py  utils.py  validation.py
app/: __init__.py  config.py  dependencies.py  exceptions.py  main.py
app/auth/: __init__.py  dependencies.py  models.py  routes.py
app/routers/: __init__.py  chat.py  data.py  feedback.py  health.py  history.py  runs.py  samples.py  sessions.py  tasks.py  upload.py
app/websocket/: __init__.py  broadcast.py  manager.py  routes.py
core/: __init__.py
core/models/: __init__.py  chat.py  node.py  plan.py  profile.py  session.py
core/services/: __init__.py  module_run_service.py  node_service.py  plan_service.py  session_service.py  storage_service.py
docs/: DEPLOYMENT.md  INDEX.md  PROJECT_ROADMAP.md  ROADMAP_PHASE_2_7.md  anthropic_agent_best_practices.md  architecture-diagram.html  design_plan_mode.md  milestone_1_architecture.md  milestone_2_profiler.md  milestone_3_strategist.md  milestone_4_engineer.md  milestone_5_api_sessions.md  milestone_5_tester.md  milestone_6_async_infrastructure.md  milestone_9.5_platform_foundation.md
docs/business/: BUSINESS_MODEL.md  COMPETITIVE_ANALYSIS.md  FINANCIALS.md  METRICS.md  ModularData_PitchDeck.pptx  PITCH_DECK.md  PRODUCT_VISION.md  ROADMAP.md  TEAM.md
docs/internal/: ARCHITECTURE.md  CODE_STYLE.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  DEV_SETUP.md  ENV_VARIABLES.md  INCIDENT_RESPONSE.md  MONITORING.md  RUNBOOKS.md  SECURITY.md  TECH_DEBT.md  TESTING.md
docs/legal/: ACCEPTABLE_USE.md  COOKIE_POLICY.md  DPA.md  GDPR.md  PRIVACY_POLICY.md  SECURITY_WHITEPAPER.md  SOC2.md  TERMS_OF_SERVICE.md
docs/marketing/: BRAND_GUIDELINES.md  CASE_STUDIES.md  FAQ.md  FEATURE_COMPARISON.md  PRESS_KIT.md  PRICING.md  PRODUCT_OVERVIEW.md  SALES_PLAYBOOK.md  USE_CASES.md
docs/users/: API_REFERENCE.md  CHANGELOG.md  GETTING_STARTED.md  MODULE_GUIDE.md  PRIMITIVES_REFERENCE.md  TRANSFORMATION_CATALOG.md
frontend/: README.md  index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css  main.tsx
lib/: __init__.py  memory.py  profiler.py  supabase_client.py  utils.py
postman/: ModularData_API.postman_collection.json  ModularData_Local.postman_environment.json
sample_data/: dirty_customer_list.csv  index.json  messy_marketing_leads.csv  sales_data_raw.csv  survey_responses.csv
scripts/: RALPH-LOOP.md  __init__.py  chat_interactive.py  demo_conversation.py  demo_improved.py  init_db.sql  migrate_add_code_preview.sql  migrate_add_deployment_status.sql  migrate_add_module_runs.sql  migrate_add_session_plans.sql  ralph-loop.sh  ralph-stop-hook.sh  start_worker.py  test_affirmative.py  test_each_category.py  test_pipeline.py  test_queue_flow.py  test_strategist_live.py
scripts/test-ralph/: broken.ts  comprehensive_agent_test.py  comprehensive_v2_test.py  messy_marketing_leads.csv  sample_v2_phase3_test.py  sample_v2_test.py  survey_v2_test.py  test_engineer_v2_integration.py  test_tier1_primitives.py  test_tier2_primitives.py  test_tier3_primitives.py  (+5 more)
test_data/: 02_similar_shifted_columns.csv  03_extra_unexpected_columns.csv  04_header_offset_messy.csv  05_completely_different.csv  customers.csv  sample.csv  transform_test.csv
tests/: __init__.py  conftest.py  test_chat_modes.py  test_memory.py  test_models.py  test_profiler.py  test_schema_matching.py  test_strategist.py  test_tester.py  test_transformations.py
transforms_v2/: TEST_PROMPTS.md  __init__.py  engine.py  registry.py  types.py
workers/: __init__.py  celery_app.py  config.py  tasks.py
(+33 files in other folders)
